--- a/package.json
+++ b/package.json
@@ -10,9 +10,16 @@
     "express": "~4.13.2",
     "immutable": "~3.7.4",
     "babel": "~5.8.20",
-    "kefir": "~2.7.2"
+    "kefir": "~2.7.2",
+    "react": "~0.13.3"
   },
   "scripts": {
     "start-admin": "node ./scripts/start-admin"
+  },
+  "devDependencies": {
+    "babel-core": "^5.8.20",
+    "babel-loader": "~5.3.2",
+    "babel-runtime": "^5.8.20",
+    "webpack": "~1.10.5"
   }
 }
