--- a/package.json
+++ b/package.json
@@ -13,13 +13,14 @@
     "kefir": "~2.7.2",
     "react": "~0.13.3"
   },
-  "scripts": {
-    "start-admin": "node ./scripts/start-admin"
-  },
   "devDependencies": {
     "babel-core": "^5.8.20",
     "babel-loader": "~5.3.2",
     "babel-runtime": "^5.8.20",
     "webpack": "~1.10.5"
+  },
+  "scripts": {
+    "start-admin": "node ./scripts/start-admin",
+    "start-user": "node ./scripts/start-user"
   }
 }
