--- a/package.json
+++ b/package.json
@@ -5,13 +5,15 @@
   "author": "jacob.h.page@gmail.com",
   "license": "BSD-2-Clause",
   "dependencies": {
-    "ws": "~0.7.2",
+    "babel": "~5.8.20",
     "bluebird": "~2.9.34",
     "express": "~4.13.2",
     "immutable": "~3.7.4",
-    "babel": "~5.8.20",
     "kefir": "~2.7.2",
-    "react": "~0.13.3"
+    "react": "~0.13.3",
+    "sticky-session": "^0.1.0",
+    "uuid": "^2.0.1",
+    "ws": "~0.7.2"
   },
   "devDependencies": {
     "babel-core": "^5.8.20",
